@@ -969,14 +969,16 @@ started these clone on 12th of July, 2019
 [uuk]: moved player entity rendering to player-class as it is simpler than expected
 [uuk]: player entity parts are rendered now with correct rotation
 [uuk]: added entities to saves
+[uuk]: added /summon command
 
 todo: implement animations to player visualisation, fix hand when item in hand, only show the hand when an item is in it
 todo: add path-finding-system
 todo: fix bug: player is not rendered when exiting generated chunks when barrier is deactivated -> chunk rendering flag
     not used correctly in this case
 todo: add loading phases for entities
-todo: add /summon command
 todo: add more entities!!!
 todo: add mob spawning
 todo: remove default BoxModel-class and replace with the new one
+todo: implement real selectors
+todo: add check if entity is summon-able by summon command to it
 
